--- a/docs/home.css
+++ b/docs/home.css
@@ -5,6 +5,11 @@ body {
     flex-direction: column;
 }
 
+a img {
+    user-select: none;
+    -webkit-user-drag: none;
+}
+
 .flex {
     display: flex;
 }
