--- a/docs/home.css
+++ b/docs/home.css
@@ -5,7 +5,7 @@ body {
     flex-direction: column;
 }
 
-a img {
+a img, button img {
     user-select: none;
     -webkit-user-drag: none;
 }
@@ -508,6 +508,7 @@ footer .foo .foo-items a {
     text-decoration: none;
     color: #000;
     padding-top: .5rem;
+    width: max-content;
 }
 
 footer .foo .foo-items a:hover {
